--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-   <body>
-    <h1>Hello Man This page For testing</h1>
-    <h2>This is a second line</h2>
-    <button >hey <a href="google.com"></a></button>
-    <script src="something.js"></script>
-    </body>  
-</html>
+<h1> hacked by Rushbruh</h1>
